fork SocksDroid as jorkProxy with VPN resilience and UI overhaul
Rebrand to com.jork.proxy with custom VPN service featuring
watchdog-based tunnel monitoring, exponential backoff restart,
network change detection, always-on VPN support with auto-connect
on boot, and foreground service status file for external monitoring.
Reworked UI with collapsible advanced settings and always-on VPN shortcut.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>